--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Portfolio"
     />
-    <link rel="icon" type="image/png"  href="./home.svg">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ray's Portfolio</title>
   </head>
